@@ -7,6 +7,7 @@ Release 0.7.0: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-1903. Fix findbugs warnings in tez-runtime-internal module.
   TEZ-1896. Move the default heartbeat timeout and checkinterval to TezConfiguration.
   TEZ-1923. FetcherOrderedGrouped gets into infinite loop due to memory pressure.
   TEZ-1274. Remove Key/Value type checks in IFile.
